# okerr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: anyerr_macro_test.rs  context_test.rs  derive_error_test.rs  ensure_macro_test.rs  err_macro_test.rs  fail_macro_test.rs  from_boxed_error_test.rs  nested_errors_test.rs  std_error_compatibility_test.rs  wrap_err_test.rs
